<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Multiplayer">
        <EditTextPreference
            android:singleLine="true"
            android:title="@string/mmoptions_mp_username_title"
            android:key="mp_username"
            android:summary=""
            android:defaultValue="Steve"
            android:dialogTitle="@string/mmoptions_mp_username_dialog"/>
        <CheckBoxPreference
            android:title="@string/mmoptions_mp_server_visible_default_title"
            android:key="mp_server_visible_default"
            android:summary=""
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Graphics"
        android:key="category_graphics">
        <CheckBoxPreference
            android:title="@string/mmoptions_gfx_fancygraphics_title"
            android:key="gfx_fancygraphics"
            android:summary="@string/mmoptions_gfx_fancygraphics_summary"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="@string/mmoptions_gfx_lowquality_title"
            android:key="gfx_lowquality"
            android:summary="@string/mmoptions_gfx_lowquality_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Controls">
        <com.mojang.android.preferences.SliderPreference
            android:enabled="true"
            android:max="100"
            android:title="@string/mmoptions_ctrl_sensitivity_title"
            android:key="ctrl_sensitivity"
            android:summary=""
            android:defaultValue="50"/>
        <CheckBoxPreference
            android:enabled="true"
            android:title="@string/mmoptions_ctrl_invertmouse_title"
            android:key="ctrl_invertmouse"
            android:summary=""
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:enabled="true"
            android:title="@string/mmoptions_ctrl_islefthanded_title"
            android:key="ctrl_islefthanded"
            android:summary=""
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:enabled="false"
            android:title="@string/mmoptions_ctrl_usetouchscreen_title"
            android:key="ctrl_usetouchscreen"
            android:summary=""
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:enabled="true"
            android:title="@string/mmoptions_ctrl_usetouchjoypad_title"
            android:key="ctrl_usetouchjoypad"
            android:summary=""
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Feedback">
        <CheckBoxPreference
            android:enabled="true"
            android:title="@string/mmoptions_feedback_vibration_title"
            android:key="feedback_vibration"
            android:summary="@string/mmoptions_feedback_vibration_summary"
            android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>
