<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bgtiled"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18">
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0">
            <ImageButton
                android:id="@+id/button_createworld_cancel"
                android:background="@drawable/btn_nw_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>
            <ImageButton
                android:id="@+id/header_createworld_worldname"
                android:background="@drawable/worldname_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"/>
            <ImageButton
                android:id="@+id/button_createworld_create"
                android:background="@drawable/btn_nw_create"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <View
                android:id="@+id/View01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"/>
            <com.mojang.android.EditTextAscii
                android:typeface="monospace"
                android:gravity="center_horizontal"
                android:id="@+id/editText_worldName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/createworld_new_world"
                android:layout_weight="0.5">
                <requestFocus/>
            </com.mojang.android.EditTextAscii>
            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <com.mojang.minecraftpe.GameModeButton
                android:id="@+id/button_gameMode"
                android:background="@drawable/btngamemode"
                android:layout_width="173dp"
                android:layout_height="46dp"
                android:textOn=" "
                android:textOff=" "
                android:text="Button"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:id="@+id/linearLayout5"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:typeface="monospace"
                android:id="@+id/labelGameModeDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gamemode_survival_summary"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:typeface="monospace"
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createworld_seed"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/View03"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"/>
            <EditText
                android:typeface="monospace"
                android:gravity="center_horizontal"
                android:id="@+id/editText_worldSeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_weight="0.5"/>
            <View
                android:id="@+id/View02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:typeface="monospace"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createworld_seed_info"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
